--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           context: ./
           file: ./dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/dockercleaner:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/dockcleaner:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
